fixed for loop wrapping wrong div

--- a/admins/static/style.css
+++ b/admins/static/style.css
@@ -392,7 +392,7 @@ button {
     padding: 2vh 1vw 2vh 1vw;
     width: 80%;
     grid-gap: 0px;
-    margin: 1.5vw 1.5vw;
+    margin: 1.5vh auto 1.5vh auto;
     transition: all 0.3s;
     box-shadow: 0 0 50px 2px #000000;
     z-index: 999;
